fix horizontal scroll

--- a/writings/new/index.css
+++ b/writings/new/index.css
@@ -1,11 +1,20 @@
+html body {
+    overflow-x: hidden;
+}
 
 body {
     margin: 0;
     background-color: #111;
-    width: 100vw;
+    /* width: 100vw; */
+    /* width: 100%; */
     height: 100vh;
-    overflow-x: hidden;
 }
+/*
+#anti-scroll-wrapper {
+    overflow-x: hidden;
+    position: relative;
+    height: 100vh;
+} */
 
 #view-modal {
     /* height: calc(100vh - 80px); */
@@ -16,6 +25,7 @@ body {
     position: relative;
     z-index: 1;
     opacity: 0;
+    overflow-x: hidden;
 
 }
 
@@ -41,13 +51,13 @@ body {
 }
 
 #opening-wrapper {
-    width: 100vw;
+    /* width: 100vw; */
     height: 100vh;
     position: relative;
 }
 
 #opening {
-    width: 100vw;
+    /* width: 100vw; */
     position: relative;
 
 
